# surrealdb-actix

./: .gitignore  Cargo.toml
src/: main.rs  prelude.rs
src/api/: mod.rs  story.rs
src/config/: surrealdb.rs
src/model/: story.rs
src/repository/: story.rs
src/utils/: mod.rs  response.rs
