[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
surrealdb = "1.0.0-beta.8"

serde = { version = "*", features = ["derive"]}
derive_more = "*"
serde_json = "*"
dotenv = "*"
thiserror = "1"
